Updated with version: 4.0.1 53.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,9 +2,14 @@
 
 UNRELEASED:
 
+Version: 4.0.1, Date: 2019-11-26
+- Updated translations
+- In the 'bandaid' logic for getadblock.com, the addition of the message handler listener was modified to not be dependant on the load event.
+- Added a log message when the extension is updated
+
 Version: 4.0.0, Date: 2019-11-24
 - Updated translations
-- Add logic to enroll all (new and existing) users in AdBlock Premium
+- Added logic to enroll all (new and existing) users in AdBlock Premium
 - Added a limit of 2 to the image replacements attempted on Facebook, as is done on other sites
 - Removed AdBlock Premium test code
 - Minor style modifications the AdBlock popup menu and the AdBlock Options pages
