--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -2528,7 +2528,7 @@
     "description": "The text of the header the MyAdBlock Options page"
   },
   "myadblock_short_description_to_pay": {
-    "message": "Mit diesen benutzerfreundlichen Add-ons werden Sie zum Werbeblocker-Profi.",
+    "message": "Mit diesen benutzerfreundlichen Add-ons werden Sie zum Ad-Blocker-Profi.",
     "description": "The text next to the 'Get It Now' button on top of the MyAdBlock Options page"
   },
   "get_it_now": {
