--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -2556,7 +2556,7 @@
     "description": "The title of a feature box in the MyAdBlock Options page"
   },
   "sync_your_settings_description": {
-    "message": "Bloquez des publicités avec des règles, des listes blanches et des paramètres personnalisés sur n'importe quel type d'ordinateur.",
+    "message": "Gardez vos règles de blocage de publicités, vos listes blanches et paramètres personnalisés, quel que soit l'ordinateur utilisé.",
     "description": "The main text of a feature box in the MyAdBlock Options page"
   },
   "how_can_we_help": {
