--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -12,7 +12,7 @@
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
   "description_yt":{
-    "message":"חוסם פרסומות YouTube™ היחיד שנבנה ע\"י AdBlock, הרחבת Chrome הפופולרית ביותר עם 60 מיליון משתמשים ברחבי העולם",
+    "message":"חוסם פרסומות YouTube™ היחיד שנבנה ע״י AdBlock, הרחבת Chrome הפופולרית ביותר עם 60 מיליון משתמשים ברחבי העולם",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
@@ -56,11 +56,11 @@
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
   },
   "operabutton_how_to_hide2":{
-    "message":"כדי להסתיר את הכפתור, לך אל opera://extensions וסמן את האפשרות 'הסתר מסרגל הכלים'. אתה יכול להציגו שוב ע\"י ביטול סימון אפשרות זו.",
+    "message":"כדי להסתיר את הכפתור, לך אל opera://extensions וסמן את האפשרות 'הסתר מסרגל הכלים'. אתה יכול להציגו שוב ע״י ביטול סימון אפשרות זו.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Opera displays on the Extensions page."
   },
   "safaributton_how_to_hide2":{
-    "message":"כדי להסתיר את הכפתור, לחץ לחיצה ימנית על סרגל הכלים של Safari ובחר בסרגל הכלים התאמה אישית, לאחר מכן גרור את כפתור AdBlock מחוץ אל סרגל הכלים. אתה יכול להראותו שוב ע\"י גרירתו חזרה אל סרגל הכלים.",
+    "message":"כדי להסתיר את הכפתור, לחץ לחיצה ימנית על סרגל הכלים של Safari ובחר בסרגל הכלים התאמה אישית, לאחר מכן גרור את כפתור AdBlock מחוץ אל סרגל הכלים. אתה יכול להראותו שוב ע״י גרירתו חזרה אל סרגל הכלים.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Customize Toolbar' should match the text that Safari displays in the toolbar's context menu."
   },
   "ff_button_how_to_hide":{
@@ -272,7 +272,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"התר אל AdBlock לאסוף נתוני שימוש אלמוניים של רשימת מסננים, ומידע אודות תוכן שנחסם ע\"י רשימות מסננים",
+    "message":"התר אל AdBlock לאסוף נתוני שימוש אלמוניים של רשימת מסננים, ומידע אודות תוכן שנחסם ע״י רשימות מסננים",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
@@ -584,7 +584,7 @@
     "description":"Introduction of the ad reporting page"
   },
   "adreportvoluntary":{
-    "message":"דיווח על פרסומת הוא התנדבותי. הוא עוזר לאנשים אחרים ע\"י אפשור למתחזקי רשימות המסננים לחסום את הפרסומת בשביל כולם. אם אינך מרגיש זולתני כרגע, זה בסדר. סגור עמוד זה ו[[חסום את הפרסומת]] רק לעצמך.",
+    "message":"דיווח על פרסומת הוא התנדבותי. הוא עוזר לאנשים אחרים ע״י אפשור למתחזקי רשימות המסננים לחסום את הפרסומת בשביל כולם. אם אינך מרגיש זולתני כרגע, זה בסדר. סגור עמוד זה ו[[חסום את הפרסומת]] רק לעצמך.",
     "description":"Introduction of the ad reporting page"
   },
   "malwarenotificationcheckboxmessage":{
@@ -1196,11 +1196,11 @@
     "description":"Label at the bottom of the 'Customize' tab of the Options page"
   },
   "disabled_by_filter_lists":{
-    "message":"מצטערים, AdBlock מושבת בעמוד זה ע\"י אחת מרשימות המסננים שלך.",
+    "message":"מצטערים, AdBlock מושבת בעמוד זה ע״י אחת מרשימות המסננים שלך.",
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list."
   },
   "disabled_by_filter_lists_yt":{
-    "message":"מצטערים, AdBlock ב־YouTube™ מושבת בעמוד זה ע\"י אחת מאפשרויותך.",
+    "message":"מצטערים, AdBlock ב־YouTube™ מושבת בעמוד זה ע״י אחת מאפשרויותך.",
     "description":"Message shown when a user tries to un-whitelist a web page that has been whitelisted by a rule in a subscribed filter list. Specific to the 'AdBlock on YouTube' extension."
   },
   "dont_run_on_pages_on_domain":{
@@ -1722,7 +1722,7 @@
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
   "acceptableadsdisable_how_to_reenable":{
-    "message":"אתה יכול להפעיל זאת חזרה ולתמוך באתרים שאתה אוהב ע\"י בחירה \"התר מעט פרסום בלתי־פולשני\" למטה.",
+    "message":"אתה יכול להפעיל זאת חזרה ולתמוך באתרים שאתה אוהב ע״י בחירה \"התר מעט פרסום בלתי־פולשני\" למטה.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
   "easylist_lite_or_easylist":{
@@ -1762,7 +1762,7 @@
     "description":"Label for a textbox where the user enters their name (or nickname) to submit a bug or ad report."
   },
   "adreport_email":{
-    "message":"מה כתובת הדוא\"ל שלך?",
+    "message":"מה כתובת הדוא״ל שלך?",
     "description":"Label for a textbox where the user enters their email address to submit a bug or ad report."
   },
   "adreport_email_privacy":{
@@ -1778,7 +1778,7 @@
     "description":"Label next to a file upload button."
   },
   "adreport_filter":{
-    "message":"במקרה שיצרת מסנן עובד ע\"י שימוש באשף \"חסום פרסומת\", הדבק אותו בתיבה להלן:",
+    "message":"במקרה שיצרת מסנן עובד ע״י שימוש באשף \"חסום פרסומת\", הדבק אותו בתיבה להלן:",
     "description":"Optional question on the ad report page when the ad needs to be reported to AdBlock."
   },
   "buttonsubmit":{
@@ -1794,7 +1794,7 @@
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
   "adreport_response_success":{
-    "message":"הכל מוכן! נהיה בקשר בהקדם האפשרי. בינתיים, חפש דוא\"ל מאת AdBlock. תמצא שם קישור אל הכרטיס שלך באתר העזרה שלנו, ביחד עם מספר הצעות עזרה־עצמית אם איננו יכולים לחזור אליך מיד.",
+    "message":"הכל מוכן! נהיה בקשר בהקדם האפשרי. בינתיים, חפש דוא״ל מאת AdBlock. תמצא שם קישור אל הכרטיס שלך באתר העזרה שלנו, ביחד עם מספר הצעות עזרה־עצמית אם איננו יכולים לחזור אליך מיד.",
     "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
   },
   "adreport_response_invalid_file":{
@@ -1949,9 +1949,25 @@
     "message":"בחר מהקטגוריות למטה ו־AdBlock יחליף לעיתים פרסומות בתמונות באיכות גבוהה כדי להבהיר את היום שלך.",
     "description":"The label text for the switch on the MyAdBlock Options page"
   },
+  "myadblock_enrollment_success":{
+    "message":"אתה יכול להשתמש בקישור הקסם בדוא״ל האישור שלך כדי לבטל את נעילת MyAdBlock בדפדפני Chrome אחרים.",
+    "description":"MyAdBlock successfully licensed message."
+  },
+  "check_email":{
+    "message":"אנא בדוק את הדוא״ל שלך.",
+    "description":"Prompt the user to check their email for a message from AdBlock"
+  },
+  "myadblock_enrollment_resend_error":{
+    "message":"הייתה בעיה בשליחה מחדש של דוא״ל האישור שלך.",
+    "description":"MyAdBlock license email failed to send error message."
+  },
   "error_msg_header":{
     "message":"אופס! אנחנו מצטערים, לתפריט AdBlock הייתה בעיה בטעינה.",
     "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help_us":{
+    "message":"עזור לנו לפתור בעיה זו ע״י שליחת כמה נתוני ניפוי אלינו: לחץ ",
+    "description":"DO NOT TRANSLATE"
   },
   "error_msg_thank_you":{
     "message":"תודה",
@@ -2093,6 +2109,10 @@
     "message":"עוד מאפיינים יגיעו בקרוב!",
     "description":"Title of the teaser MyAdBlock feature box in the MyAdBlock tab of the Options page"
   },
+  "myadblock_benefits_explained":{
+    "message":"בתמורה לתמיכה בנו ע״י איפשור MyAdBlock, תקבל גישה אל הכלים והמאפיינים האחרונים ברגע שהם ישוחררו.",
+    "description":"Main text of the teaser MyAdBlock feature in the MyAdBlock tab of the Options page"
+  },
   "myadblock_payment_not_available_callout":{
     "message":"אוי לא!",
     "description":"The text notifying something is wrong in the payment iframe in the Options page."
@@ -2140,5 +2160,17 @@
   "adblock_will_block_ads_again":{
     "message":"במקרה שנלחץ, AdBlock יחסום פרסומות שוב.",
     "description":"Second sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "premium_enrollment_success":{
+    "message":"אתה יכול להשתמש בקישור הקסם בדוא״ל האישור שלך כדי לבטל את נעילת AdBlock Premium בדפדפני Chrome אחרים.",
+    "description":"DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
+  },
+  "future_show_ads":{
+    "message":"בעתיד, עמודים אלו ימשיכו להראות פרסומות.",
+    "description":"Part of a message on the whitelist wizard"
+  },
+  "rule_added_filters":{
+    "message":"הכלל הבא התווסף אל המסננים שלך:",
+    "description":"Part of a message on the blacklist wizard"
   }
 }
