--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1,4 +1,8 @@
 {
+  "description":{
+    "message":"Bloqueja anuncis i finestres emergents a YouTube, Facebook, Twitch i als vostres llocs web favorits.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description2":{
     "message":"L'extensió més popular de Chrome, amb més de 60 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
@@ -6,6 +10,10 @@
   "name_devbuild":{
     "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
     "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — el millor bloquejador d'anuncis"
   },
   "description_edge":{
     "message":"AdBlock. El millor bloquejador de publicitat amb més de 200 milions de baixades. Bloqueja tota la publicitat de la xarxa.",
@@ -36,7 +44,7 @@
     "description":"Ad report page string, when you're about to submit a report."
   },
   "buttonblockit":{
-    "message":"Bloquejar-ho!",
+    "message":"Bloqueja-ho!",
     "description":"Block button"
   },
   "buttonedit":{
@@ -2217,6 +2225,10 @@
     "message":"Rebecca Violeta",
     "description":"Name of a theme in the Themes tab of the Options page"
   },
+  "solarized_light_theme":{
+    "message":"Llum de sol",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme":{
     "message":"Aplica el tema",
     "description":"Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
@@ -2269,6 +2281,10 @@
     "message":"No hem pogut connectar-nos als nostres servidors",
     "description":"The sub-title of an error message box in payment iframe in the Options page."
   },
+  "sync_tab_item":{
+    "message":"Còpia de seguretat i sincronització",
+    "description":"Title of the Sync sub-tab of the Options page"
+  },
   "sync_turn_on_invalid_name_text":{
     "message":"Nomeneu aquesta extensió per continuar",
     "description":"error message text on the Sync sub-tab of the Options page"
@@ -2280,6 +2296,10 @@
   "sync_extension_section_title":{
     "message":"Extensions",
     "description":"section title text on the Sync sub-tab of the Options page"
+  },
+  "sync_header_message_no_license":{
+    "message":"Doneu-nos uns minuts per preparar Sync.",
+    "description":"message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
   },
   "sync_header_message_getting_license":{
     "message":"s'està comprovant...",
@@ -2301,6 +2321,10 @@
     "message":"Error de sincronització:",
     "description":"start of error message to users on the sync page when sync fails."
   },
+  "sync_header_message_setup_fail_part_2":{
+    "message":"Proveu d'afegir aquesta extensió de nou en uns minuts.",
+    "description":"message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
   "sync_header_message_error_prefix":{
     "message":"Aquesta extensió no estava sincronitzada.",
     "description":"Start of an sync error message to users on the Options page or AdBlock popup menu."
@@ -2308,6 +2332,18 @@
   "sync_header_message_old_commit_version_part_2":{
     "message":"Hem sincronitzat aquesta extensió i revertit els canvis.",
     "description":"part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_part_3":{
+    "message":"Recarregueu la pàgina i torneu a fer els canvis.",
+    "description":"part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_save_message_part_2":{
+    "message":"Aquesta extensió no està sincronitzada.",
+    "description":"part 2 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
+  },
+  "sync_header_error_save_message_part_3":{
+    "message":"Proveu a sincronitzar manualment més tard.",
+    "description":"part 3 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_customize_tab_part_2":{
     "message":"Hem sincronitzat aquesta extensió i revertirem els canvis.",
@@ -2327,6 +2363,14 @@
       }
     }
   },
+  "sync_extension_name_placeholder":{
+    "message":"Assigneu un nom a aquesta extensió per poder distingir-la de les altres...",
+    "description":"placeholder text in the extension / device name field on the sync page"
+  },
+  "sync_verify_turn_on_text":{
+    "message":"En activar la còpia de seguretat i sincronització, s'esborrarà la informació de la configuració existent d'aquesta extensió.",
+    "description":"message text in the extension / device name field on the sync page"
+  },
   "sync_now_btn_text":{
     "message":"Sincronitza ara",
     "description":"button text on the Sync sub-tab of the Options page"
@@ -2338,6 +2382,54 @@
   "sync_message_old_version_part_2":{
     "message":"[[Actualitza l'AdBlock]] per tal de sincronitzar la vostra configuració.",
     "description":"button text on the Sync sub-tab of the Options page"
+  },
+  "sync_premium_cta":{
+    "message":"Us convertireu en un professional del bloqueig d'anuncis amb funcions prèmium com ara Sync.",
+    "description":"AdBlock Premium CTA on the Sync tab"
+  },
+  "backup_sync_settings":{
+    "message":"Feu còpies de seguretat i sincronitzeu automàticament la vostra configuració de l'AdBlock en tots els dispositius.",
+    "description":"Description of Sync on Sync tab"
+  },
+  "set_preferences_once":{
+    "message":"Definiu les vostres preferències un cop i mai més us preocupeu per la pèrdua de dades o per fer el mateix canvi en múltiples extensions.",
+    "description":"Description of Sync on Sync tab"
+  },
+  "get_sync":{
+    "message":"Obtén Sync",
+    "description":"Link to pay for Sync (part of AdBlock Premium)"
+  },
+  "check_sync_status":{
+    "message":"Comprova l'estat del Sync",
+    "description":"Button on Sync tab that checks the status of the Sync feature"
+  },
+  "show_details":{
+    "message":"Mostra els detalls",
+    "description":"Toggle that shows the details section"
+  },
+  "hide_details":{
+    "message":"Amaga els detalls",
+    "description":"Toggle that hides the details section"
+  },
+  "add_this_extension":{
+    "message":"Afegeix aquesta extensió",
+    "description":"Button on Sync tab that adds this extension to the Sync process"
+  },
+  "add":{
+    "message":"Afegeix",
+    "description":"Button on Sync tab that adds an entered name for this extension to the list of synced extensions"
+  },
+  "this_extension":{
+    "message":"(aquesta extensió)",
+    "description":"description for name of the current extension"
+  },
+  "confirm_delete_extension":{
+    "message":"Esteu segur que voleu suprimir aquesta extensió?",
+    "description":"Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+  },
+  "delete":{
+    "message":"Suprimeix",
+    "description":"Text on a delete button"
   },
   "filteracceptable_ads_privacy":{
     "message":"Privadesa d'anuncis acceptables",
@@ -2778,5 +2870,101 @@
   "resume_blocking_ads_period":{
     "message":"Reprèn el bloqueig d'anuncis.",
     "description":"First sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "do_not_swap_ads":{
+    "message":"No canviïs els anuncis",
+    "description":"Text of a clickable option to stop swapping ads with images in the Options page Image Swap tab."
+  },
+  "premium":{
+    "message":"Prèmium",
+    "description":"Abbreviated name of the AdBlock upgrade."
+  },
+  "adblock_premium":{
+    "message":"AdBlock Prèmium",
+    "description":"Full name of the AdBlock upgrade."
+  },
+  "premium_enrollment_title":{
+    "message":"L'AdBlock Prèmium està configurat en aquest navegador!",
+    "description":"DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
+  },
+  "premium_enrollment_success":{
+    "message":"Podeu utilitzar l'enllaç màgic del vostre correu de confirmació per desbloquejar l'AdBlock Prèmium en altres navegadors Chrome.",
+    "description":"DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
+  },
+  "premium_enrollment_link_info":{
+    "message":"En fer clic a l'enllaç, és més fàcil configurar l'AdBlock Prèmium en altres navegadors Chrome.",
+    "description":"DO NOT TRANSLATE. Explains what happens when clicking the magic link."
+  },
+  "premium_page_title":{
+    "message":"AdBlock Prèmium: Una manera millor de navegar per Internet. ",
+    "description":"The text of the header the AdBlock Premium Options page"
+  },
+  "premium_benefits_explained":{
+    "message":"A canvi de donar-nos suport en activar l'AdBlock Premium, obtindreu accés a les últimes eines i característiques tan aviat com es publiquin.",
+    "description":"Main text of the teaser AdBlock Premium feature in the AdBlock Premium tab of the Options page"
+  },
+  "manage_subscription":{
+    "message":"Gestiona la meva subscripció",
+    "description":"Text of link to manage the user's Premium subscription on the Premium tab of the Options page"
+  },
+  "save_custom_settings_cta":{
+    "message":"Voleu desar la vostra configuració personalitzada de bloqueig d'anuncis i utilitzar-la a tots els navegadors?",
+    "description":"Part 1 of a Premium call-to-action on the Options page"
+  },
+  "try_backup_sync":{
+    "message":"En cas afirmatiu, proveu la nostra funció de còpia de seguretat i sincronització.",
+    "description":"Part 2 of a Premium call-to-action on the Options page"
+  },
+  "wont_show_again":{
+    "message":"D'acord, no us tornarem a mostrar aquest missatge.",
+    "description":"Message shown when user opts out of call-to-action"
+  },
+  "check_out_premium":{
+    "message":"Si voleu obtenir més informació, consulteu [[Premium]].",
+    "description":"Part 2 of message shown when user opts out of call-to-action"
+  },
+  "successfully_whitelisted":{
+    "message":"Heu afegit correctament a la llista blanca aquesta URL.",
+    "description":"Part of a message on the whitelist wizard"
+  },
+  "future_show_ads":{
+    "message":"D'ara en endavant, aquestes pàgines continuaran mostrant anuncis.",
+    "description":"Part of a message on the whitelist wizard"
+  },
+  "change_behavior_settings":{
+    "message":"Podeu canviar aquest comportament a la [[settings]].",
+    "description":"Part of a message on the whitelist and blacklist wizards"
+  },
+  "whitelisted_a_site":{
+    "message":"Acabeu d'afegir un lloc web a la llista blanca!",
+    "description":"Part 1 of a call-to-action on the whitelist wizard"
+  },
+  "never_lose_settings":{
+    "message":"Apliqueu aquesta configuració a tots els dispositius i assegureu-vos que no perdeu mai la configuració de l'AdBlock amb la còpia de seguretat i sincronització.",
+    "description":"Part 2 of a call-to-action on the whitelist and blacklist wizards"
+  },
+  "successfully_blocked_ad":{
+    "message":"Heu bloquejat correctament aquest anunci.",
+    "description":"Part of a message on the blacklist wizard"
+  },
+  "future_ads_blocked":{
+    "message":"D'ara en endavant, es continuaran bloquejant els anuncis que coincideixin amb aquestes regles.",
+    "description":"Part of a message on the blacklist wizard"
+  },
+  "rule_added_filters":{
+    "message":"La següent regla s'ha afegit als vostres filtres:",
+    "description":"Part of a message on the blacklist wizard"
+  },
+  "blocked_something":{
+    "message":"Acabeu de bloquejar alguna cosa en aquest lloc web!",
+    "description":"Part 1 of a call-to-action on the blacklist wizard"
+  },
+  "adblock_looked_like_this":{
+    "message":"Què passa si l'AdBlock es veu així?",
+    "description":"Part 1 of a call-to-action on the Popup menu"
+  },
+  "check_out_themes":{
+    "message":"Feu un cop d'ull als temes!",
+    "description":"Part 2 of a call-to-action on the Popup menu"
   }
 }
