--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -15,6 +15,10 @@
     "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
     "message":"AdBlock — best ad blocker"
   },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_edge":{
     "message":"AdBlock. The #1 ad blocker with over 200 million downloads. Blocks ads all over the web.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
