Updated with version: 4.3.0 53.0 changes

--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -3,6 +3,18 @@
     "message":"الإضافة الأكثر شعبية في كروم، أكثر من ٦٠ مليون مستخدم! تمنع الإعلانات على الإنترنت.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_edge":{
     "message":"AdBlock. مانع الإعلانات رقم واحد مع ما يزيد على ٢٠٠ مليون تحميل. يحجب الإعلانات في جميع أنحاء شبكة الإنترنت.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
