--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -7,6 +7,18 @@
     "message":"AdBlock. Jednička v blokování reklam s více než 200 milióny stažení. Blokuje reklamy po celém webu.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "name_adblock_on_youtube":{
     "message":"AdBlock na YouTube™",
     "description":"Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
