--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -7,6 +7,14 @@
     "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
     "message":"AdBlock 개발 빌드"
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_edge":{
     "message":"AdBlock. 2억 회 이상 다운로드된 1위 광고 차단기. 인터넷의 모든 광고를 차단하세요.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
