--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -7,6 +7,14 @@
     "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
     "message":"Pembangunan membina AdBlock"
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_edge":{
     "message":"AdBlock. Penyekat iklan No. 1 dengan lebih 200 juta muat turun. Sekat iklan di seluruh web.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
