--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -3,6 +3,18 @@
     "message":"AdBlock. Numer 1 wśród programów do blokowania reklam z ponad 200 milionów pobrań. Blokuje reklamy w całym internecie.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_yt":{
     "message":"Tylko AdBlock blokuje reklamy w YouTube™, najpopularniejsze rozszerzenie Chrome z 60 milionów użytkowników z całego świata",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
