--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -3,6 +3,18 @@
     "message":"Най-популярното разширение за Chrome с над 60 милиона потребители! Блокира реклами в световната мрежа.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_edge":{
     "message":"AdBlock. Блокер на реклами №1 с над 200 милиона изтегляния! Блокира реклами в световната мрежа.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
