--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -3,6 +3,18 @@
     "message":"AdBlock. O bloqueador n. º 1 con máis de 200 millóns de descargas. Bloquea anuncios por toda a rede.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_yt":{
     "message":"O único bloqueador de anuncios para YouTube creado por AdBlock, a extensión de Chrome máis popular con 60 millóns de usuarios",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
