--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -7,6 +7,18 @@
     "message":"AdBlock. Az elsőszámú hirdetés blokkoló, több mint 200 millió letöltéssel. Blokkolja a hirdetéseket szerte a hálón.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_yt":{
     "message":"Az egyetlen YouTube™ hirdetésblokkoló az AdBlock jóvoltából, a legnépszerűbb Chrome bővítmény 60 millió felhasználóval világszerte",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
