--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -3,6 +3,18 @@
     "message":"AdBlock. 200 milyonun üzerinde indirmeyle #1 numaralı reklam engelleyicisi. Tüm web sitelerindeki reklamları engeller.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_yt":{
     "message":"Dünya üzerinde 60 milyon kullanıcısı olan Chrome eklentisi AdBlock tarafından yapılan tek YouTube reklam engelleyici",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
