--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -7,6 +7,18 @@
     "message":"AdBlock. Блокувальник реклами № 1, завантажений більш ніж 200 мільйонів разів. Блокує рекламу по всьому інтернету.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
+  "name":{
+    "description":"Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message":"AdBlock — best ad blocker"
+  },
   "description_yt":{
     "message":"Блокувальник реклами для YouTube™ на базі AdBlock, найпопулярнішого розширення Chrome із 60 мільйонами користувачів по всьому світу",
     "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
