--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -2956,5 +2956,47 @@
   "filter_invalid": {
     "message": "Invalid filter",
     "description": "Generic error shown when the user tries to add an invalid filter rule to their custom filters"
+  },
+  "love_adblock": {
+    "message": "Love AdBlock?",
+    "description": "Text in a button that asks users to rate us."
+  },
+  "show_some_love": {
+    "message": "Show AdBlock some love!",
+    "description": "Title of the tooltip of the rate us button CTA in the Options page."
+  },
+  "support_with_a_review": {
+    "message": "Support our team by leaving us a review.",
+    "description": "Text of the tooltip of the rate us button CTA in the Options page."
+  },
+  "leave_a_review": {
+    "message": "Leave us a review!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "rate_us": {
+    "message": "Rate Us",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review."
+  },
+  "youve_blocked_num_ads": {
+    "message": "You've blocked $numBlocked$ ads!",
+    "description": "Text of a menu item in the popup menu asking users to leave us a review. The $numBlocked$ will be replaced with the number of ads the users has blocked, starting at 10,000.",
+    "placeholders":{
+      "numBlocked":{
+        "content":"$1",
+        "example":"10,000"
+      }
+    }
+  },
+  "enjoying_adblock": {
+    "message": "Enjoying AdBlock?",
+    "description": "Text of a footer in the popup menu help flow asking users to leave us a review."
+  },
+  "back_help_flow": {
+    "message": "Go back one step in the help flow.",
+    "description": "Aria label for back button in help flow (in popup menu)"
+  },
+  "close_help_flow": {
+    "message": "Close help flow and go back to the pop-up menu.",
+    "description": "Aria label for close button in help flow (in popup menu)"
   }
 }
